--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kawsar — Automation Engineer (Telegram & WhatsApp)</title>
   <meta name="description" content="Kawsar — Automation engineer specializing in Telegram/WhatsApp bots, session lifecycle, and multi-API orchestration with Python (Aiogram, Pyrogram, Telethon, FastAPI)." />
+
+  <!-- Icons / PWA -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=2">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
+  <link rel="manifest" href="/site.webmanifest?v=2">
+  <meta name="theme-color" content="#0b0f17">
+
   <style>
     /* ===== Design Tokens ===== */
     :root {
@@ -71,38 +79,38 @@
     .hamburger{display:none;gap:6px;flex-direction:column;width:38px;height:38px;align-items:center;justify-content:center;border:1px solid var(--border);border-radius:12px;background:transparent;color:var(--text)}
     .hamburger span{display:block;width:18px;height:2px;background:currentColor;border-radius:2px}
     @media(max-width:950px){ .links{display:none} .hamburger{display:flex} }
+
     /* Dropdown */
-.dropdown{
-  position:absolute;
-  top:60px; left:0; right:0;
-  background:var(--panel);
-  border-bottom:1px solid var(--border);
-  max-height:0;                 /* collapse completely when closed */
-  overflow:hidden;              /* hide contents */
-  transition:max-height var(--d-mid) var(--ease-spring);
-}
-.dropdown .wrap{
-  max-width:1100px; margin:0 auto;
-  padding:0;                    /* no padding while closed */
-  display:flex; flex-wrap:wrap; gap:12px; align-items:center;
-}
-.dropdown.open{ max-height:500px; } /* enough headroom for links */
-.dropdown.open .wrap{ padding:12px 20px; }
+    .dropdown{
+      position:absolute;
+      top:60px; left:0; right:0;
+      background:var(--panel);
+      border-bottom:1px solid var(--border);
+      max-height:0;
+      overflow:hidden;
+      transition:max-height var(--d-mid) var(--ease-spring);
+    }
+    .dropdown .wrap{
+      max-width:1100px; margin:0 auto;
+      padding:0;
+      display:flex; flex-wrap:wrap; gap:12px; align-items:center;
+    }
+    .dropdown.open{ max-height:500px; }
+    .dropdown.open .wrap{ padding:12px 20px; }
 
-.dropdown a{
-  color:var(--muted);
-  padding:10px 12px;
-  border:1px solid var(--border);
-  border-radius:10px;
-  transition:transform var(--d-fast) var(--ease-spring), border-color var(--d-fast);
-}
-.dropdown a:hover{ transform:translateY(-2px); color:var(--text); border-color:#c4b5fd; }
-.dropdown .handlers{ margin-left:auto; display:flex; gap:10px; }
-.dropdown .handlers a{
-  display:inline-grid; place-items:center; width:36px; height:36px;
-  border:1px solid var(--border); border-radius:10px; color:#d1d5db;
-}
-
+    .dropdown a{
+      color:var(--muted);
+      padding:10px 12px;
+      border:1px solid var(--border);
+      border-radius:10px;
+      transition:transform var(--d-fast) var(--ease-spring), border-color var(--d-fast);
+    }
+    .dropdown a:hover{ transform:translateY(-2px); color:var(--text); border-color:#c4b5fd; }
+    .dropdown .handlers{ margin-left:auto; display:flex; gap:10px; }
+    .dropdown .handlers a{
+      display:inline-grid; place-items:center; width:36px; height:36px;
+      border:1px solid var(--border); border-radius:10px; color:#d1d5db;
+    }
 
     /* ===== Hero ===== */
     header.hero{padding:70px 0 36px}
@@ -154,22 +162,17 @@
     .reveal{opacity:0;transform:translateY(14px);filter:saturate(.8);transition:opacity var(--d-mid) var(--ease-spring), transform var(--d-mid) var(--ease-spring), filter var(--d-mid) var(--ease-spring)}
     .reveal.slide-left{transform:translateX(-24px)}
     .reveal.slide-right{transform:translateX(24px)}
+    .reveal.slide-up{transform:translateY(24px)}   /* added */
     .reveal.fade-in{transform:none;opacity:0}
     .reveal.is-visible{opacity:1;transform:none;filter:saturate(1)}
-
-    /* Nice little code glow when visible */
     .terminal.reveal.is-visible{box-shadow:0 24px 60px rgba(124,58,237,.18), inset 0 1px 0 rgba(255,255,255,.06)}
-
-    /* Parallax hint (very subtle) */
     .parallax{transform:translateY(0);will-change:transform}
-
-    /* Keyframes */
     @keyframes spin{to{transform:rotate(360deg)}}
 
-    /* Reduced motion: respect user preference */
+    /* Reduced motion */
     @media (prefers-reduced-motion: reduce){
       *{animation-duration:1ms !important; animation-iteration-count:1 !important; transition-duration:1ms !important; scroll-behavior:auto !important}
-      .reveal, .reveal.slide-left, .reveal.slide-right{opacity:1 !important; transform:none !important}
+      .reveal, .reveal.slide-left, .reveal.slide-right, .reveal.slide-up{opacity:1 !important; transform:none !important}
     }
   </style>
 </head>
@@ -190,27 +193,20 @@
 
         <div class="handler-links" title="Handlers">
           <!-- Telegram -->
-          <a href="https://t.me/mkawsarrrr" aria-label="Telegram">
+          <a href="https://t.me/mkawsarrrr" target="_blank" rel="noopener" aria-label="Telegram">
             <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
           </a>
           <!-- WhatsApp -->
           <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." 
-          target="_blank" rel="noopener" aria-label="WhatsApp">
-         <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-         <path d="M.057 24l1.687-6.163a11.867 11.867 0 01-1.62-6.003C.122 5.3 5.36 0 12.057 0 15.3 0 18.31 1.264 20.5 3.552a11.8 11.8 0 013.557 8.432c-.003 6.697-5.3 11.935-11.996 11.935-2.043 0-4.003-.517-5.766-1.497L.057 24zm6.597-3.807c1.735.995 3.27 1.591 5.392 1.592 5.377.003 9.76-4.372 9.766-9.749.003-5.39-4.36-9.76-9.752-9.764-5.384-.003-9.761 4.372-9.764 9.756-.001 2.266.658 3.985 1.746 5.69l-.999 3.648 3.611-.173zM8.69 7.607c-.273-.608-.56-.62-.82-.63-.212-.009-.455-.008-.698-.008s-.64.092-.976.455c-.336.364-1.28 1.25-1.28 3.046s1.31 3.534 1.494 3.778c.182.243 2.52 4.037 6.107 5.49 3.02 1.192 3.634.956 4.288.895.654-.061 2.117-.863 2.414-1.695.297-.832.297-1.544.208-1.695-.09-.151-.334-.243-.698-.425-.364-.182-2.154-1.062-2.488-1.183-.334-.121-.577-.182-.82.182-.243.364-.94 1.182-1.152 1.425-.212.243-.425.273-.788.091-.364-.182-1.538-.568-2.932-1.813-1.084-.966-1.816-2.157-2.029-2.521-.213-.364-.023-.56.16-.742.164-.163.364-.425.546-.637.182-.212.243-.364.364-.606.121-.243.061-.455-.03-.637-.09-.182-.79-1.971-1.113-2.689z"/>
-         </svg>
-         </a>
-
-          <!-- Gmail -->
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmudur3550943@gmail.com&su=Project%20Inquiry" target="_blank" rel="noopener" aria-label="Gmail">
-        <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-        <path d="M22.5 5.5v13a1.5 1.5 0 01-1.5 1.5h-2V9.708l-6 4.5-6-4.5V20H4A1.5 1.5 0 012.5 18.5v-13a1.5 1.5 0 012.4-1.2l7.6 5.7 7.6-5.7a1.5 1.5 0 012.4 1.2z"/>
-        </svg>
-        </a>
-
-
+             target="_blank" rel="noopener" aria-label="WhatsApp">
+            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M.057 24l1.687-6.163a11.867 11.867 0 01-1.62-6.003C.122 5.3 5.36 0 12.057 0 15.3 0 18.31 1.264 20.5 3.552a11.8 11.8 0 013.557 8.432c-.003 6.697-5.3 11.935-11.996 11.935-2.043 0-4.003-.517-5.766-1.497L.057 24zm6.597-3.807c1.735.995 3.27 1.591 5.392 1.592 5.377.003 9.76-4.372 9.766-9.749.003-5.39-4.36-9.76-9.752-9.764-5.384-.003-9.761 4.372-9.764 9.756-.001 2.266.658 3.985 1.746 5.69l-.999 3.648 3.611-.173z"/></svg>
+          </a>
+          <!-- Gmail (compose in browser) -->
+          <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmudur3550943@gmail.com&su=Project%20Inquiry" target="_blank" rel="noopener" aria-label="Gmail">
+            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M22.5 5.5v13a1.5 1.5 0 01-1.5 1.5h-2V9.708l-6 4.5-6-4.5V20H4A1.5 1.5 0 012.5 18.5v-13a1.5 1.5 0 012.4-1.2l7.6 5.7 7.6-5.7a1.5 1.5 0 012.4 1.2z"/></svg>
+          </a>
           <!-- Phone -->
-          <a href="tel:+8801000000000" aria-label="Phone">
+          <a href="tel:+8801782603168" aria-label="Phone">
             <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.86 19.86 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.16 9.81 19.86 19.86 0 0 1 .09 1.18 2 2 0 0 1 2.07-.99h3a2 2 0 0 1 2 1.72c.12.9.32 1.78.61 2.63a2 2 0 0 1-.45 2.11L6.1 7.1a16 16 0 0 0 6.9 6.9l1.63-1.13a2 2 0 0 1 2.11-.45c.85.29 1.73.49 2.63.61A2 2 0 0 1 22 16.92z"/></svg>
           </a>
         </div>
@@ -242,10 +238,10 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <div class="handlers">
-          <a href="https://t.me/Telegram" aria-label="Telegram">TG</a>
-          <a href="https://wa.me/15551234567" target="_blank" rel="noopener" aria-label="WhatsApp">WA</a>
-          <a href="mailto:hello@example.com" aria-label="Gmail">GM</a>
-          <a href="tel:+8801000000000" aria-label="Phone">PH</a>
+          <a href="https://t.me/mkawsarrrr" target="_blank" rel="noopener" aria-label="Telegram">TG</a>
+          <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." target="_blank" rel="noopener" aria-label="WhatsApp">WA</a>
+          <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmudur3550943@gmail.com&su=Project%20Inquiry" target="_blank" rel="noopener" aria-label="Gmail">GM</a>
+          <a href="tel:+8801782603168" aria-label="Phone">PH</a>
         </div>
       </div>
     </div>
@@ -257,7 +253,7 @@
       <div>
         <h1 class="reveal slide-left" data-delay="0.1">Hi, I'm <span class="grad">Kawsar</span> — I ship <em>Telegram</em> & <em>WhatsApp</em> automations that scale.</h1>
         <p class="subtitle reveal slide-left" data-delay="0.2">Bots, session lifecycle systems, and multi-API tools engineered with typed contracts, structured logging, and secure architectures.</p>
-        <div class="meta reveal slide-left" data-delay="0.3" data-stagger>
+        <div class="meta class reveal slide-left" data-delay="0.3" data-stagger>
           <span class="pill">Aiogram</span><span class="pill">Pyrogram</span><span class="pill">Telethon</span>
           <span class="pill">FastAPI</span><span class="pill">Postgres</span><span class="pill">Redis</span><span class="pill">Docker</span>
         </div>
@@ -455,11 +451,10 @@ if __name__ == "__main__":
       });
     });
 
-    // ===== Reveal on scroll (IntersectionObserver) =====
+    // Reveal on scroll
     (function(){
       const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-      if(prefersReduced) return; // respect user
-
+      if(prefersReduced) return;
       const els=[...document.querySelectorAll('.reveal')];
       const IO = new IntersectionObserver((entries)=>{
         entries.forEach((entry)=>{
@@ -473,8 +468,7 @@ if __name__ == "__main__":
         })
       },{root:null,threshold:0.15,rootMargin:'0px 0px -10% 0px'});
       els.forEach(el=>IO.observe(el));
-
-      // Stagger helper: any parent with data-stagger will stagger its direct children
+      // Stagger helper
       document.querySelectorAll('[data-stagger]').forEach(parent=>{
         [...parent.children].forEach((child,i)=>{
           const curr = parseFloat(child.getAttribute('data-delay')||'0');
@@ -483,7 +477,7 @@ if __name__ == "__main__":
       });
     })();
 
-    // Subtle parallax on the terminal card (disabled for reduced motion)
+    // Subtle parallax on the terminal card
     (function(){
       const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
       if(prefersReduced) return;
@@ -492,7 +486,7 @@ if __name__ == "__main__":
       const onScroll = ()=>{
         const rect = el.getBoundingClientRect();
         const mid = window.innerHeight/2;
-        const offset = (rect.top - mid) * 0.04; // subtle
+        const offset = (rect.top - mid) * 0.04;
         el.style.transform = `translateY(${offset.toFixed(2)}px)`;
       };
       onScroll();
