--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kawsar — Automation Engineer (Telegram & WhatsApp)</title>
   <meta name="description" content="Kawsar — Automation engineer specializing in Telegram/WhatsApp bots, session lifecycle, and multi-API orchestration with Python (Aiogram, Pyrogram, Telethon, FastAPI)." />
 
-  <!-- Icons / PWA -->
+  <!-- Icons / PWA (optional) -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=2">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=2">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
@@ -66,7 +66,7 @@
     .links a::after{content:"";position:absolute;left:0;right:100%;bottom:-4px;height:2px;background:linear-gradient(90deg,var(--brand),var(--brand-2));transition:right var(--d-mid) var(--ease-spring)}
     .links a:hover::after{right:0}
     .links a:hover{color:var(--text)}
-    .handler-links{display:flex;gap:10px;align-items:center}
+    .handler-links{display:flex;gap:10px;align-items:center; position:relative}
     .handler-links a{display:inline-grid;place-items:center;width:36px;height:36px;border:1px solid var(--border);border-radius:10px;color:#d1d5db;transition:transform var(--d-fast) var(--ease-spring), border-color var(--d-fast)}
     .handler-links a:hover{transform:translateY(-2px);color:#ffffff;border-color:#c4b5fd}
     .handler-links svg{width:18px;height:18px;display:block}
@@ -82,35 +82,16 @@
 
     /* Dropdown */
     .dropdown{
-      position:absolute;
-      top:60px; left:0; right:0;
-      background:var(--panel);
-      border-bottom:1px solid var(--border);
-      max-height:0;
-      overflow:hidden;
+      position:absolute;top:60px;left:0;right:0;background:var(--panel);
+      border-bottom:1px solid var(--border);max-height:0;overflow:hidden;
       transition:max-height var(--d-mid) var(--ease-spring);
     }
-    .dropdown .wrap{
-      max-width:1100px; margin:0 auto;
-      padding:0;
-      display:flex; flex-wrap:wrap; gap:12px; align-items:center;
-    }
-    .dropdown.open{ max-height:500px; }
-    .dropdown.open .wrap{ padding:12px 20px; }
-
-    .dropdown a{
-      color:var(--muted);
-      padding:10px 12px;
-      border:1px solid var(--border);
-      border-radius:10px;
-      transition:transform var(--d-fast) var(--ease-spring), border-color var(--d-fast);
-    }
-    .dropdown a:hover{ transform:translateY(-2px); color:var(--text); border-color:#c4b5fd; }
-    .dropdown .handlers{ margin-left:auto; display:flex; gap:10px; }
-    .dropdown .handlers a{
-      display:inline-grid; place-items:center; width:36px; height:36px;
-      border:1px solid var(--border); border-radius:10px; color:#d1d5db;
-    }
+    .dropdown .wrap{max-width:1100px;margin:0 auto;padding:0;display:flex;flex-wrap:wrap;gap:12px;align-items:center}
+    .dropdown.open{max-height:500px}
+    .dropdown.open .wrap{padding:12px 20px}
+    .dropdown a{color:var(--muted);padding:10px 12px;border:1px solid var(--border);border-radius:10px;transition:transform var(--d-fast) var(--ease-spring), border-color var(--d-fast)}
+    .dropdown a:hover{transform:translateY(-2px);color:var(--text);border-color:#c4b5fd}
+    .dropdown .handlers{margin-left:auto;display:flex;gap:10px;position:relative}
 
     /* ===== Hero ===== */
     header.hero{padding:70px 0 36px}
@@ -174,10 +155,19 @@
 
     @keyframes spin{to{transform:rotate(360deg)}}
 
-    /* Reduced motion */
+    /* ===== Telegram chooser menu ===== */
+    .tg-chooser{position:relative}
+    .tg-menu{position:absolute; top:120%; right:0; background:var(--panel); border:1px solid var(--border); border-radius:12px; min-width:220px; box-shadow:var(--shadow); padding:6px; opacity:0; transform:translateY(-6px); pointer-events:none; transition:opacity var(--d-fast) var(--ease-spring), transform var(--d-fast) var(--ease-spring); z-index:60}
+    .tg-menu.open{opacity:1; transform:translateY(0); pointer-events:auto}
+    .tg-menu a{display:flex; gap:8px; align-items:center; padding:10px 12px; border-radius:10px; color:var(--text); border:1px solid transparent}
+    .tg-menu a:hover{background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02)); border-color:var(--border)}
+    .tg-sep{height:1px; margin:6px 6px; background:var(--border)}
+
+    /* Reduced motion: respect user preference */
     @media (prefers-reduced-motion: reduce){
       *{animation-duration:1ms !important; animation-iteration-count:1 !important; transition-duration:1ms !important; scroll-behavior:auto !important}
       .reveal, .reveal.slide-left, .reveal.slide-right, .reveal.slide-up{opacity:1 !important; transform:none !important}
+      .tg-menu{transition:none}
     }
   </style>
 </head>
@@ -197,13 +187,21 @@
         <a href="#contact">Contact</a>
 
         <div class="handler-links" title="Handlers">
-          <!-- Telegram -->
-          <a id="tgLink" href="https://t.me/mkawsarrrr" rel="noopener" aria-label="Telegram">
-            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
-          </a>
+          <!-- Telegram (chooser) -->
+          <div class="tg-chooser">
+            <a id="tgTrigger" href="#" aria-label="Telegram" aria-haspopup="menu" aria-expanded="false">
+              <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
+            </a>
+            <div class="tg-menu" id="tgMenu" role="menu" aria-labelledby="tgTrigger">
+              <a id="openTgOfficial" role="menuitem" href="#">Open in Telegram (official)</a>
+              <a id="openTgX" role="menuitem" href="#">Open in Telegram X</a>
+              <div class="tg-sep"></div>
+              <a id="openTgWeb" role="menuitem" href="#">Open in Telegram Web</a>
+            </div>
+          </div>
+
           <!-- WhatsApp -->
-          <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." 
-             target="_blank" rel="noopener" aria-label="WhatsApp">
+          <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." target="_blank" rel="noopener" aria-label="WhatsApp">
             <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M.057 24l1.687-6.163a11.867 11.867 0 01-1.62-6.003C.122 5.3 5.36 0 12.057 0 15.3 0 18.31 1.264 20.5 3.552a11.8 11.8 0 013.557 8.432c-.003 6.697-5.3 11.935-11.996 11.935-2.043 0-4.003-.517-5.766-1.497L.057 24zm6.597-3.807c1.735.995 3.27 1.591 5.392 1.592 5.377.003 9.76-4.372 9.766-9.749.003-5.39-4.36-9.76-9.752-9.764-5.384-.003-9.761 4.372-9.764 9.756-.001 2.266.658 3.985 1.746 5.69l-.999 3.648 3.611-.173z"/></svg>
           </a>
           <!-- Gmail (compose in browser) -->
@@ -243,7 +241,16 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <div class="handlers">
-          <a id="tgLinkMobile" href="https://t.me/mkawsarrrr" rel="noopener" aria-label="Telegram">TG</a>
+          <!-- Simple text trigger for mobile -->
+          <div class="tg-chooser">
+            <a id="tgTriggerMobile" href="#" aria-label="Telegram" aria-haspopup="menu" aria-expanded="false">TG ▾</a>
+            <div class="tg-menu" id="tgMenuMobile" role="menu" aria-labelledby="tgTriggerMobile">
+              <a id="openTgOfficialMobile" role="menuitem" href="#">Open in Telegram (official)</a>
+              <a id="openTgXMobile" role="menuitem" href="#">Open in Telegram X</a>
+              <div class="tg-sep"></div>
+              <a id="openTgWebMobile" role="menuitem" href="#">Open in Telegram Web</a>
+            </div>
+          </div>
           <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." target="_blank" rel="noopener" aria-label="WhatsApp">WA</a>
           <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmudur3550943@gmail.com&su=Project%20Inquiry" target="_blank" rel="noopener" aria-label="Gmail">GM</a>
           <a href="tel:+8801782603168" aria-label="Phone">PH</a>
@@ -456,42 +463,77 @@ if __name__ == "__main__":
       });
     });
 
-    // Platform-aware Telegram link (avoid Telegram X)
-    (function () {
+    // ===== Telegram chooser logic =====
+    (function(){
       const username = 'mkawsarrrr';
-      const webLink = `https://web.telegram.org/k/#@${username}`;
-      const defaultLink = `https://t.me/${username}`;
-      const androidIntent =
-        `intent://resolve?domain=${username}` +
-        `#Intent;scheme=tg;package=org.telegram.messenger;` +
-        `S.browser_fallback_url=${encodeURIComponent(webLink)};end`;
-
       const ua = navigator.userAgent || navigator.vendor || window.opera;
       const isAndroid = /Android/i.test(ua);
       const isiOS = /iPhone|iPad|iPod/i.test(ua);
 
-      function resolveLink(){
-        if(isAndroid) return androidIntent;
-        if(isiOS) return webLink;
-        return defaultLink;
+      const links = {
+        tgOfficialAndroid: `intent://resolve?domain=${username}#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=${encodeURIComponent('https://web.telegram.org/k/#@'+username)};end`,
+        tgXAndroid: `intent://resolve?domain=${username}#Intent;scheme=tg;package=org.thunderdog.challegram;S.browser_fallback_url=${encodeURIComponent('https://web.telegram.org/k/#@'+username)};end`,
+        tgScheme: `tg://resolve?domain=${username}`,
+        tgWeb: `https://web.telegram.org/k/#@${username}`,
+        tgTme: `https://t.me/${username}`
+      };
+
+      function open(url){
+        try{ window.location.href = url; }catch(_){ window.location.href = links.tgWeb; }
       }
-      function wire(id){
-        const el = document.getElementById(id);
-        if(!el) return;
-        el.addEventListener('click', function(e){
-          const url = resolveLink();
-          try{ e.preventDefault(); window.location.href = url; }
-          catch(_){ /* fallback */ }
+
+      function setupChooser(triggerId, menuId, ids){
+        const trigger = document.getElementById(triggerId);
+        const menu = document.getElementById(menuId);
+        if(!trigger || !menu) return;
+
+        const openOfficial = document.getElementById(ids.official);
+        const openX = document.getElementById(ids.x);
+        const openWeb = document.getElementById(ids.web);
+
+        // Hide Telegram X option on non-Android
+        if(openX) openX.style.display = isAndroid ? 'block' : 'none';
+
+        // Wire items
+        openOfficial?.addEventListener('click', (e)=>{
+          e.preventDefault();
+          if(isAndroid) open(links.tgOfficialAndroid);
+          else if(isiOS) open(links.tgScheme); // iOS will use the registered Telegram app
+          else open(links.tgTme);
+          close();
         });
+        openX?.addEventListener('click', (e)=>{
+          e.preventDefault();
+          if(isAndroid) open(links.tgXAndroid);
+          else open(links.tgWeb);
+          close();
+        });
+        openWeb?.addEventListener('click', (e)=>{ e.preventDefault(); open(links.tgWeb); close(); });
+
+        // Toggle menu
+        function openMenu(){ menu.classList.add('open'); trigger.setAttribute('aria-expanded','true'); }
+        function closeMenu(){ menu.classList.remove('open'); trigger.setAttribute('aria-expanded','false'); }
+        function toggle(){ menu.classList.contains('open') ? closeMenu() : openMenu(); }
+        function close(){ closeMenu(); }
+
+        trigger.addEventListener('click', (e)=>{ e.preventDefault(); toggle(); });
+
+        // Close on outside click / ESC
+        document.addEventListener('click', (e)=>{
+          if(!menu.contains(e.target) && !trigger.contains(e.target)) closeMenu();
+        });
+        document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closeMenu(); });
       }
-      wire('tgLink');
-      wire('tgLinkMobile');
+
+      setupChooser('tgTrigger','tgMenu',{official:'openTgOfficial', x:'openTgX', web:'openTgWeb'});
+      setupChooser('tgTriggerMobile','tgMenuMobile',{official:'openTgOfficialMobile', x:'openTgXMobile', web:'openTgWebMobile'});
     })();
 
-    // Reveal on scroll
+    // ===== Reveal on scroll =====
     (function(){
       const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-      if(prefersReduced) return;
+      if(prefersReduced) return; // respect user
+
       const els=[...document.querySelectorAll('.reveal')];
       const IO = new IntersectionObserver((entries)=>{
         entries.forEach((entry)=>{
@@ -505,6 +547,7 @@ if __name__ == "__main__":
         })
       },{root:null,threshold:0.15,rootMargin:'0px 0px -10% 0px'});
       els.forEach(el=>IO.observe(el));
+
       // Stagger helper
       document.querySelectorAll('[data-stagger]').forEach(parent=>{
         [...parent.children].forEach((child,i)=>{
@@ -523,7 +566,7 @@ if __name__ == "__main__":
       const onScroll = ()=>{
         const rect = el.getBoundingClientRect();
         const mid = window.innerHeight/2;
-        const offset = (rect.top - mid) * 0.04;
+        const offset = (rect.top - mid) * 0.04; // subtle
         el.style.transform = `translateY(${offset.toFixed(2)}px)`;
       };
       onScroll();
