--- a/index.html
+++ b/index.html
@@ -448,10 +448,7 @@ if __name__ == "__main__":
       const burger=document.getElementById('hamburger');
       const dd=document.getElementById('dropdown');
       burger?.addEventListener('click',()=>dd.classList.toggle('open'));
-      // Close dropdown on link click
-      dd.querySelectorAll('a[href^="#"]').forEach(a=>{
-        a.addEventListener('click',()=>dd.classList.remove('open'));
-      });
+      dd.querySelectorAll('a[href^="#"]').forEach(a=>{ a.addEventListener('click',()=>dd.classList.remove('open')); });
     })();
 
     // Smooth scroll
@@ -463,23 +460,34 @@ if __name__ == "__main__":
       });
     });
 
-    // ===== Telegram chooser logic =====
+    // ===== Telegram chooser logic (channel post link) =====
     (function(){
-      const username = 'mkawsarrrr';
+      // Target a specific channel post like https://t.me/ManishDigitalAcademy/31
+      const tg = { domain: 'ManishDigitalAcademy', post: '31' };
       const ua = navigator.userAgent || navigator.vendor || window.opera;
       const isAndroid = /Android/i.test(ua);
       const isiOS = /iPhone|iPad|iPod/i.test(ua);
 
+      const tme = `https://t.me/${tg.domain}/${tg.post}`; // good universal fallback
+      const tgScheme = `tg://resolve?domain=${tg.domain}&post=${tg.post}`; // iOS & Android scheme
+
       const links = {
-        tgOfficialAndroid: `intent://resolve?domain=${username}#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=${encodeURIComponent('https://web.telegram.org/k/#@'+username)};end`,
-        tgXAndroid: `intent://resolve?domain=${username}#Intent;scheme=tg;package=org.thunderdog.challegram;S.browser_fallback_url=${encodeURIComponent('https://web.telegram.org/k/#@'+username)};end`,
-        tgScheme: `tg://resolve?domain=${username}`,
-        tgWeb: `https://web.telegram.org/k/#@${username}`,
-        tgTme: `https://t.me/${username}`
+        tgOfficialAndroid: `intent://resolve?domain=${tg.domain}&post=${tg.post}#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=${encodeURIComponent(tme)};end`,
+        tgXAndroid: `intent://resolve?domain=${tg.domain}&post=${tg.post}#Intent;scheme=tg;package=org.thunderdog.challegram;S.browser_fallback_url=${encodeURIComponent(tme)};end`,
+        tgScheme,
+        tgWeb: tme,
+        tgTme: tme
       };
 
       function open(url){
-        try{ window.location.href = url; }catch(_){ window.location.href = links.tgWeb; }
+        // iOS fallback timer in case the app isn't installed
+        if(isiOS && url.startsWith('tg://')){
+          const start = Date.now();
+          window.location.href = url;
+          setTimeout(()=>{ if(Date.now()-start < 1400) window.location.href = links.tgWeb; }, 1200);
+        } else {
+          try{ window.location.href = url; } catch(_){ window.location.href = links.tgWeb; }
+        }
       }
 
       function setupChooser(triggerId, menuId, ids){
@@ -491,37 +499,28 @@ if __name__ == "__main__":
         const openX = document.getElementById(ids.x);
         const openWeb = document.getElementById(ids.web);
 
-        // Hide Telegram X option on non-Android
         if(openX) openX.style.display = isAndroid ? 'block' : 'none';
 
-        // Wire items
         openOfficial?.addEventListener('click', (e)=>{
           e.preventDefault();
           if(isAndroid) open(links.tgOfficialAndroid);
-          else if(isiOS) open(links.tgScheme); // iOS will use the registered Telegram app
+          else if(isiOS) open(links.tgScheme);
           else open(links.tgTme);
-          close();
+          closeMenu();
         });
         openX?.addEventListener('click', (e)=>{
           e.preventDefault();
-          if(isAndroid) open(links.tgXAndroid);
-          else open(links.tgWeb);
-          close();
+          if(isAndroid) open(links.tgXAndroid); else open(links.tgWeb);
+          closeMenu();
         });
-        openWeb?.addEventListener('click', (e)=>{ e.preventDefault(); open(links.tgWeb); close(); });
+        openWeb?.addEventListener('click', (e)=>{ e.preventDefault(); open(links.tgWeb); closeMenu(); });
 
-        // Toggle menu
         function openMenu(){ menu.classList.add('open'); trigger.setAttribute('aria-expanded','true'); }
         function closeMenu(){ menu.classList.remove('open'); trigger.setAttribute('aria-expanded','false'); }
         function toggle(){ menu.classList.contains('open') ? closeMenu() : openMenu(); }
-        function close(){ closeMenu(); }
 
         trigger.addEventListener('click', (e)=>{ e.preventDefault(); toggle(); });
-
-        // Close on outside click / ESC
-        document.addEventListener('click', (e)=>{
-          if(!menu.contains(e.target) && !trigger.contains(e.target)) closeMenu();
-        });
+        document.addEventListener('click', (e)=>{ if(!menu.contains(e.target) && !trigger.contains(e.target)) closeMenu(); });
         document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closeMenu(); });
       }
 
