--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@ if __name__ == "__main__":
 
     // ===== Telegram chooser logic (channel post link) =====
     (function(){
-      // Target a specific channel post like https://t.me/ManishDigitalAcademy/31
-      const tg = { domain: 'ManishDigitalAcademy', post: '31' };
+      // Target a specific channel post like https://t.me/work_with_trust/30
+      const tg = { domain: 'work_with_trust', post: '30' };
       const ua = navigator.userAgent || navigator.vendor || window.opera;
       const isAndroid = /Android/i.test(ua);
       const isiOS = /iPhone|iPad|iPod/i.test(ua);
