--- a/index.html
+++ b/index.html
@@ -188,17 +188,9 @@
 
         <div class="handler-links" title="Handlers">
           <!-- Telegram (chooser) -->
-          <div class="tg-chooser">
-            <a id="tgTrigger" href="#" aria-label="Telegram" aria-haspopup="menu" aria-expanded="false">
-              <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
-            </a>
-            <div class="tg-menu" id="tgMenu" role="menu" aria-labelledby="tgTrigger">
-              <a id="openTgOfficial" role="menuitem" href="#">Open in Telegram (official)</a>
-              <a id="openTgX" role="menuitem" href="#">Open in Telegram X</a>
-              <div class="tg-sep"></div>
-              <a id="openTgWeb" role="menuitem" href="#">Open in Telegram Web</a>
-            </div>
-          </div>
+          <a id="tgOfficial" href="https://t.me/work_with_trust/30" aria-label="Telegram">
+            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
+          </a>
 
           <!-- WhatsApp -->
           <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." target="_blank" rel="noopener" aria-label="WhatsApp">
@@ -242,12 +234,7 @@
         <a href="#contact">Contact</a>
         <div class="handlers">
           <!-- Simple text trigger for mobile -->
-          <div class="tg-chooser">
-            <a id="tgTriggerMobile" href="#" aria-label="Telegram" aria-haspopup="menu" aria-expanded="false">TG ▾</a>
-            <div class="tg-menu" id="tgMenuMobile" role="menu" aria-labelledby="tgTriggerMobile">
-              <a id="openTgOfficialMobile" role="menuitem" href="#">Open in Telegram (official)</a>
-              <a id="openTgXMobile" role="menuitem" href="#">Open in Telegram X</a>
-              <div class="tg-sep"></div>
+          <a id="tgOfficialMobile" href="https://t.me/work_with_trust/30" aria-label="Telegram">TG</a>
               <a id="openTgWebMobile" role="menuitem" href="#">Open in Telegram Web</a>
             </div>
           </div>
@@ -460,72 +447,36 @@ if __name__ == "__main__":
       });
     });
 
-    // ===== Telegram chooser logic (channel post link) =====
+    // ===== Telegram official app only (channel post link) =====
     (function(){
-      // Target a specific channel post like https://t.me/work_with_trust/30
       const tg = { domain: 'work_with_trust', post: '30' };
       const ua = navigator.userAgent || navigator.vendor || window.opera;
       const isAndroid = /Android/i.test(ua);
       const isiOS = /iPhone|iPad|iPod/i.test(ua);
 
-      const tme = `https://t.me/${tg.domain}/${tg.post}`; // good universal fallback
-      const tgScheme = `tg://resolve?domain=${tg.domain}&post=${tg.post}`; // iOS & Android scheme
+      const tme = `https://t.me/${tg.domain}/${tg.post}`;
+      const scheme = `tg://resolve?domain=${tg.domain}&post=${tg.post}`;
+      const intentOfficial = `intent://resolve?domain=${tg.domain}&post=${tg.post}#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=${encodeURIComponent(tme)};end`;
 
-      const links = {
-        tgOfficialAndroid: `intent://resolve?domain=${tg.domain}&post=${tg.post}#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=${encodeURIComponent(tme)};end`,
-        tgXAndroid: `intent://resolve?domain=${tg.domain}&post=${tg.post}#Intent;scheme=tg;package=org.thunderdog.challegram;S.browser_fallback_url=${encodeURIComponent(tme)};end`,
-        tgScheme,
-        tgWeb: tme,
-        tgTme: tme
-      };
-
-      function open(url){
-        // iOS fallback timer in case the app isn't installed
-        if(isiOS && url.startsWith('tg://')){
-          const start = Date.now();
-          window.location.href = url;
-          setTimeout(()=>{ if(Date.now()-start < 1400) window.location.href = links.tgWeb; }, 1200);
-        } else {
-          try{ window.location.href = url; } catch(_){ window.location.href = links.tgWeb; }
-        }
-      }
-
-      function setupChooser(triggerId, menuId, ids){
-        const trigger = document.getElementById(triggerId);
-        const menu = document.getElementById(menuId);
-        if(!trigger || !menu) return;
-
-        const openOfficial = document.getElementById(ids.official);
-        const openX = document.getElementById(ids.x);
-        const openWeb = document.getElementById(ids.web);
-
-        if(openX) openX.style.display = isAndroid ? 'block' : 'none';
-
-        openOfficial?.addEventListener('click', (e)=>{
-          e.preventDefault();
-          if(isAndroid) open(links.tgOfficialAndroid);
-          else if(isiOS) open(links.tgScheme);
-          else open(links.tgTme);
-          closeMenu();
+      function bind(id){
+        const el = document.getElementById(id);
+        if(!el) return;
+        el.addEventListener('click', (e)=>{
+          if(isAndroid){
+            e.preventDefault();
+            window.location.href = intentOfficial;
+          } else if(isiOS){
+            e.preventDefault();
+            const start = Date.now();
+            window.location.href = scheme;
+            setTimeout(()=>{ if(Date.now()-start < 1400) window.location.href = tme; }, 1200);
+          } else {
+            // Desktop: default anchor goes to t.me
+          }
         });
-        openX?.addEventListener('click', (e)=>{
-          e.preventDefault();
-          if(isAndroid) open(links.tgXAndroid); else open(links.tgWeb);
-          closeMenu();
-        });
-        openWeb?.addEventListener('click', (e)=>{ e.preventDefault(); open(links.tgWeb); closeMenu(); });
-
-        function openMenu(){ menu.classList.add('open'); trigger.setAttribute('aria-expanded','true'); }
-        function closeMenu(){ menu.classList.remove('open'); trigger.setAttribute('aria-expanded','false'); }
-        function toggle(){ menu.classList.contains('open') ? closeMenu() : openMenu(); }
-
-        trigger.addEventListener('click', (e)=>{ e.preventDefault(); toggle(); });
-        document.addEventListener('click', (e)=>{ if(!menu.contains(e.target) && !trigger.contains(e.target)) closeMenu(); });
-        document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closeMenu(); });
       }
-
-      setupChooser('tgTrigger','tgMenu',{official:'openTgOfficial', x:'openTgX', web:'openTgWeb'});
-      setupChooser('tgTriggerMobile','tgMenuMobile',{official:'openTgOfficialMobile', x:'openTgXMobile', web:'openTgWebMobile'});
+      bind('tgOfficial');
+      bind('tgOfficialMobile');
     })();
 
     // ===== Reveal on scroll =====
