--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         <div class="handler-links" title="Handlers">
           <!-- Telegram -->
-          <a id="tgLink" href="https://t.me/work_with_trust/30" rel="noopener" aria-label="Telegram">
+          <a id="tgLink" href="https://t.me/mkawsarrrr" rel="noopener" aria-label="Telegram">
             <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
           </a>
           <!-- WhatsApp -->
