--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         <div class="handler-links" title="Handlers">
           <!-- Telegram -->
-          <a id="tgLink" href="https://t.me/mkawsarrrr" rel="noopener" aria-label="Telegram">
+          <a id="tgLink" href="https://t.me/work_with_trust/30" rel="noopener" aria-label="Telegram">
             <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M9.036 15.823l-.376 5.3c.538 0 .77-.23 1.048-.505l2.518-2.41 5.215 3.824c.956.528 1.636.251 1.896-.885l3.435-16.114c.305-1.422-.514-1.977-1.45-1.632L1.12 9.6c-1.39.541-1.369 1.318-.236 1.668l5.36 1.673L18.86 6.33c.6-.394 1.147-.176.697.218"/></svg>
           </a>
           <!-- WhatsApp -->
@@ -243,7 +243,7 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <div class="handlers">
-          <a id="tgLinkMobile" href="https://t.me/mkawsarrrr" rel="noopener" aria-label="Telegram">TG</a>
+          <a id="tgLinkMobile" href="https://t.me/work_with_trust/30" rel="noopener" aria-label="Telegram">TG</a>
           <a href="https://wa.me/8801782603168?text=Hi%20Kawsar%2C%20I%20saw%20your%20portfolio%20and%20want%20to%20discuss%20a%20project." target="_blank" rel="noopener" aria-label="WhatsApp">WA</a>
           <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmudur3550943@gmail.com&su=Project%20Inquiry" target="_blank" rel="noopener" aria-label="Gmail">GM</a>
           <a href="tel:+8801782603168" aria-label="Phone">PH</a>
